--- a/css/tablas.css
+++ b/css/tablas.css
@@ -1,5 +1,9 @@
 th, td{
-    padding: 8px;
+    padding:10px;
+}
+
+table {
+    border-collapse: collapse; /* Elimina los espacios entre celdas */
 }
 .bold-column{
     font-weight: bold;
@@ -11,4 +15,5 @@ th, td{
 .tabla-votos{
     background-color: #4bb8ba;
     color: #ffffff;
+    border: #4bb8ba;
 }
